--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "orbit-codesandbox",
   "version": "0.1.0",
   "private": true,
+  "main": "src/App.vue",
   "scripts": {
     "serve": "vue-cli-service serve"
   },
